ingress/ingress-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        # command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html"]
        command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  labels:
    app: front
spec:
  selector:
    app: front
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
