ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-test
  rules:
  - http:
      paths:
      - path: /appv1
        pathType: Prefix
        backend:
           service:
             name: app-v1
             port:
               number: 8080
